k8s/ollama-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      containers:
        - image: ollama/ollama
          imagePullPolicy: IfNotPresent
          name: llm
          command: ["/bin/sh"]
          args:
            - -c
            - |
              ollama serve &
              sleep 15
              ollama pull gemma3:1b
              wait
          ports:
            - containerPort: 11434
              protocol: TCP
          volumeMounts:
            - name: ollama-storage
              mountPath: /ollama
          resources:
            limits:
              nvidia.com/gpu: "1"
              memory: "8Gi"
              cpu: "2"
            requests:
              nvidia.com/gpu: "1"
              memory: "4Gi"
              cpu: "1"
      volumes:
        - name: ollama-storage
          persistentVolumeClaim:
            claimName: ollama-pvc
