k8s/whisper-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whisper
  labels:
    app: whisper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whisper
  template:
    metadata:
      labels:
        app: whisper
    spec:
      nodeSelector:
        cloud.google.com/gke-accelerator: nvidia-tesla-t4  # 指定 GPU 类型
      tolerations:
      - key: "nvidia.com/gpu"
        operator: "Exists"
        effect: "NoSchedule"
      containers:
        - name: whisper
          image: us-west4-docker.pkg.dev/ai-test-465504/local-voice-ai-repo/whisper-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5001
          resources:
            requests:
              memory: "4Gi"
              cpu: "1"
              nvidia.com/gpu: "1"
            limits:
              memory: "16Gi"
              cpu: "4"
              nvidia.com/gpu: "1"
          volumeMounts:
            - name: hf-cache
              mountPath: /cache
      volumes:
        - name: hf-cache
          persistentVolumeClaim:
            claimName: hf-cache-pvc
