k8s/ollama-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-service
spec:
  ports:
    - name: "11434"
      port: 11434
      targetPort: 11434
  selector:
    app: ollama
  type: ClusterIP
